# python-devcontainer

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  hardening.sh
.devcontainer/config/: .zshrc
.devcontainer/security/: trivy.yaml
src/example/: main.py
